--- a/platform/plugins/Assets/web/css/Assets.css
+++ b/platform/plugins/Assets/web/css/Assets.css
@@ -1,11 +1,15 @@
 .Q_mobile .Assets_authnet {
+    width: 133%;
+    height: 480px;
     zoom: 0.75;
+    -ms-zoom: 0.75;
     -moz-transform: scale(0.75);
     -moz-transform-origin: 0 0;
     -o-transform: scale(0.75);
     -o-transform-origin: 0 0;
     -webkit-transform: scale(0.75);
     -webkit-transform-origin: 0 0;
+    overflow: auto;    
 }
 
 .Assets_pay {
@@ -26,22 +30,26 @@
 	display: none;
 }
 
-
 .Q_notMobile .Assets_authnet {
 	width: 450px;
 	height: 480px;
 	overflow: auto;
 }
 
-.Q_mobile .Assets_authnet {
-	width: 133%;
-	height: 480px;
-    -ms-zoom: 0.75;
-    -moz-transform: scale(0.75);
-    -moz-transform-origin: 0 0;
-    -o-transform: scale(0.75);
-    -o-transform-origin: 0 0;
-    -webkit-transform: scale(0.75);
-    -webkit-transform-origin: 0 0;
-	overflow: auto;
+.Assets_amazon_tool .Assets_amazon_image {
+    width: 60px;
+    height: 60px;
+    margin: 20px;
+    border: 2px inset grey;
+    display: inline-block;    
+}
+
+.Assets_amazon_tool  .Assets_amazon_price {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 20px;
+}
+
+.Assets_amazon_tool .Assets_amazon_results_image {
+    width: 80%;
 }
